2-Tier/cic-1tier-foobar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-vpx-foobar
spec:
  selector:
    matchLabels:
      app: cic-vpx-foobar
  replicas: 1
  template:
    metadata:
      name: cic-vpx-foobar
      labels:
        app: cic-vpx-foobar
      annotations:
    spec:
      serviceAccountName: cpx
      containers:
      - name: cic-vpx-foobar
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.8.19"
        args:
          - --ingress-classes
            ctx-ingress-vpx-foobar
          - --feature-node-watch
            false
        imagePullPolicy: Always
