2-Tier/cic-1tier-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-vpx-hello
spec:
  selector:
    matchLabels:
      app: cic-vpx-hello
  replicas: 1
  template:
    metadata:
      name: cic-vpx-hello
      labels:
        app: cic-vpx-hello
      annotations:
    spec:
      serviceAccountName: acc-hello-ctx
      containers:
      - name: cic-vpx-hello
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.8.19"
        args:
          - --ingress-classes
            ctx-ingress-vpx-hello
          - --feature-node-watch
            false
        imagePullPolicy: Always
