2-Tier/cpx-cic-2tier-foobar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-cic-foobar
spec:
  selector:
    matchLabels:
      app: cpx-cic-foobar
  replicas: 1
  template:
    metadata:
      name: cpx-cic-foobar
      labels:
        app: cpx-cic-foobar
      annotations:
    spec:
      serviceAccountName:  Acc-foobar-ctx
      containers:
        - name: cpx-foobar
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-52.24"
          securityContext:
             privileged: true
          imagePullPolicy: Always
        # Add cic as a sidecar
        - name: cic-foobar
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.8.19"
          args:
            - --ingress-classes
              ctx-ingress-foobar
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: service-cpx-cic-foobar
  labels:
    app: service-cpx-cic-foobar
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 80
  - port: 443
    protocol: TCP
    name: https
    targetPort: 443
  selector:
    app: cpx-cic-foobar
