2-Tier/cpx-cic-2tier-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-cic-hello
spec:
  selector:
    matchLabels:
      app: cpx-cic-hello
  replicas: 1
  template:
    metadata:
      name: cpx-cic-hello
      labels:
        app: cpx-cic-hello
      annotations:
    spec:
      serviceAccountName:  Acc-hello-ctx
      containers:
        - name: cpx-hello
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-52.24"
          securityContext:
             privileged: true
          imagePullPolicy: Always
        # Add cic as a sidecar
        - name: cic-hello
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.8.19"
          args:
            - --ingress-classes
              ctx-ingress-hello
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: service-cpx-cic-hello
  labels:
    app: service-cpx-cic-hello
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 80
  - port: 443
    protocol: TCP
    name: https
    targetPort: 443
  selector:
    app: cpx-cic-hello
