2-Tier/cpx-cic-2tier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-2tier
spec:
  selector:
    matchLabels:
      app: cpx-2tier
  replicas: 1
  template:
    metadata:
      name: cpx-2tier
      labels:
        app: cpx-2tier
        app1: exporter
      annotations:
        NETSCALER_AS_APP: "True"
    spec:
      serviceAccountName: cpx
      containers:
        - name: cpx-2tier
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-47.103"
          securityContext:
             privileged: true
          imagePullPolicy: Always
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.6.1"
          args:
            - --ingress-classes
              cpx
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: service-cpx-2tier
  labels:
    app: service-cpx-2tier
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 80
  selector:
    app: cpx-2tier
