2-Tier/headlessHTTPService-foobar.yaml
apiVersion: v1
kind: Service
metadata:
  name: foobar-service
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: foobar
