2-Tier/headlessHTTPService-hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-world
