2-Tier/ingress-1tier-hello.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-1tier-hello
  annotations:
   kubernetes.io/ingress.class: "ctx-ingress-vpx-hello"
   ingress.citrix.com/insecure-termination: "redirect"
   # change the frontend-ip to the VIP you want to create
   ingress.citrix.com/frontend-ip: "172.16.1.55"
spec:
  rules:
  - host:  www.hello.com
    http:
      paths:
      - path:
        backend:
          serviceName: service-cpx-cic-hello
          servicePort: 80
