2-Tier/ingress-2tier-foobar.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-2tier-foobar
  annotations:
   #ingress.citrix.com/insecure-service-type: "tcp"
   #ingress.citrix.com/insecure-port: "80"
   kubernetes.io/ingress.class: "cpx-foobar"
spec:
  rules:
  - host: www.foobar.com
    http:
      paths:
      - path:
        backend:
          serviceName: foobar-service
          servicePort: 80
