2-Tier/ingress-2tier-hello.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-2tier-hello
  annotations:
   #ingress.citrix.com/insecure-service-type: "tcp"
   #ingress.citrix.com/insecure-port: "80"
   kubernetes.io/ingress.class: "cpx-hello"
spec:
  rules:
  - host: www.hello.com
    http:
      paths:
      - path:
        backend:
          serviceName: hello-world-service
          servicePort: 80
